--- a/SmartManager/app/src/main/AndroidManifest.xml
+++ b/SmartManager/app/src/main/AndroidManifest.xml
@@ -43,9 +43,9 @@
         android:required="false"/>
 
     <application
-        android:name="com.smartmanager.android.staging.SmartManagerApplication"
+        android:name="com.smartmanager.android.live.SmartManagerApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
 
